# cmt

./: .cmt.toml  .gitignore  CLAUDE.md  Cargo.toml  METHODOLOGY.md  README.md
.cursor/rules/: model-lookup-rule.mdc
.github/workflows/: format.yml  integration.yml  release.yml  test-install.yml  test.yml
examples/: print_schema.rs
scripts/: install.sh  integration.sh  release.sh  update-homebrew.sh
src/: analysis.rs  cli.rs  cmtignore.rs  commit.rs  git.rs  hook.rs  lib.rs  main.rs  pricing.rs  progress.rs  redact.rs  templates.rs
src/ai/: claude.rs  gemini.rs  http.rs  mod.rs  openai.rs
src/config/: cli.rs  defaults.rs  file.rs  mod.rs
src/prompts/: mod.rs  system_prompt.txt  user_prompt.txt
src/templates/: mod.rs
tests/: integration.sh  integration_models.rs
