[package]
name = "cmt"
version = "0.4.0"
edition = "2021"
description = "CLI tool that generates commit messages using AI"
authors = ["Clifton King <cliftonk@gmail.com>"]
license = "MIT"
repository = "https://github.com/cliftonk/cmt"
homepage = "https://github.com/cliftonk/cmt"
documentation = "https://github.com/cliftonk/cmt#readme"
readme = "README.md"
keywords = ["git", "commit", "openai", "claude", "gpt"]
categories = [
  "command-line-utilities",
  "development-tools",
  "development-tools::build-utils",
]

[[bin]]
name = "cmt"
path = "src/bin/main.rs"

[lib]
name = "cmt"
path = "src/lib.rs"

[dependencies]
git2 = { version = "0.20.0", default-features = false }
colored = "3.0.0"
reqwest = { version = "0.12.12", features = [
  "json",
  "blocking",
  "rustls-tls",
], default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
dotenv = "0.15.0"
clap = { version = "4.5", features = ["derive", "std"] }
thiserror = "2.0.11"
handlebars = "6.3.1"
toml = "0.8.20"

[dev-dependencies]
tempfile = "3.16.0"
mockito = "1.6.1"
serial_test = "3.2.0"

[profile.release]
opt-level = "z"   # Optimize for size
lto = true
codegen-units = 1
strip = true
panic = "abort"   # Remove panic unwinding code
